<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gpc_sunset"
    tools:context=".login.LoginActivity">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="248dp"
            android:layout_marginTop="16dp"
            android:background="#70000000"
            android:backgroundTint="@color/colorLightGray">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:orientation="vertical">


                <EditText
                    android:id="@+id/EmailEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_ET"
                    app:backgroundTint="@color/colorPrimary">

                </EditText>


                <EditText
                    android:id="@+id/PasswordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:hint="@string/password_ET"
                    app:backgroundTint="@color/colorPrimary">

                </EditText>


                <Button
                    android:id="@+id/LoginButton"
                    android:layout_width="match_parent"
                    android:layout_height="65dp"
                    android:layout_alignParentBottom="true"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/ripple_effect"
                    android:text="@string/login_button"
                    android:textColor="@color/background"
                    android:textSize="@dimen/button_text_size"
                    android:textStyle="bold" />


            </LinearLayout>

        </RelativeLayout>


    </FrameLayout>


</RelativeLayout>